--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,16 @@ STATIC_URL_PREFIX=/api/static
 # ==================== 其他配置 ====================
 DEFAULT_CURRENCY=CNY
 
+# ==================== Docker 端口配置 ====================
+# 如果 80/443 端口被占用，可以修改为其他端口
+# HTTP_PORT=8080
+# HTTPS_PORT=8443
+
+# ==================== Docker 初始化配置 ====================
+# 初始管理员账号（首次启动时自动创建，数据库已有管理员则跳过）
+INIT_ADMIN_USERNAME=admin
+INIT_ADMIN_PASSWORD=your-admin-password
+
 # ==================== 说明 ====================
 # 邮件配置已移至后台管理界面（基础配置 -> 邮件配置）
 # 支付方式配置已移至后台管理界面（商品管理 -> 支付方式）
