--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,9 @@ services:
       APP_NAME: ${APP_NAME:-Card Store}
       DEBUG: "false"
       SECRET_KEY: ${SECRET_KEY}
+      # 初始管理员配置（首次启动时自动创建）
+      INIT_ADMIN_USERNAME: ${INIT_ADMIN_USERNAME:-}
+      INIT_ADMIN_PASSWORD: ${INIT_ADMIN_PASSWORD:-}
       # 数据库配置
       DATABASE_URL: postgres://${POSTGRES_USER:-cardstore}:${POSTGRES_PASSWORD:-cardstore}@db:5432/${POSTGRES_DB:-cardstore}
       # Redis 配置
@@ -93,8 +96,8 @@ services:
     container_name: cardstore-nginx
     restart: unless-stopped
     ports:
-      - "80:80"
-      - "443:443"
+      - "${HTTP_PORT:-80}:80"
+      - "${HTTPS_PORT:-443}:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
