新增微信支付提供商

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "aiofiles>=25.1.0",
     "httpx>=0.28.1",
     "redis>=7.1.0",
+    "wechatpayv3>=2.0.1",
 ]
 
 [project.optional-dependencies]
