--- a/admin/nginx.conf
+++ b/admin/nginx.conf
@@ -4,13 +4,24 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # 支持 Vue Router history 模式
+    # 处理 /admin/ 前缀的请求（外部 nginx 转发过来的）
+    location /admin/ {
+        alias /usr/share/nginx/html/;
+        try_files $uri $uri/ /index.html;
+    }
+
+    # 处理 /admin 精确匹配（重定向到带斜杠的路径）
+    location = /admin {
+        return 301 /admin/;
+    }
+
+    # 直接访问（本地开发或容器内测试）
     location / {
         try_files $uri $uri/ /index.html;
     }
 
     # 静态资源缓存
-    location /assets/ {
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 30d;
         add_header Cache-Control "public, immutable";
     }
