--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -55,19 +55,9 @@ server {
         proxy_read_timeout 60s;
     }
 
-    # 后台管理界面 -> admin 服务
+    # 后台管理界面 -> admin 服务（保留 /admin 前缀）
     location /admin {
         proxy_pass http://admin;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-    }
-
-    # 后台管理静态资源
-    location /admin/ {
-        proxy_pass http://admin/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
