--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -56,7 +56,7 @@ server {
     }
 
     # 后台管理界面 -> admin 服务（保留 /admin 前缀）
-    location /admin {
+    location /admin/ {
         proxy_pass http://admin;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
@@ -65,7 +65,14 @@ server {
         proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
     }
 
-    # 前台用户界面 -> web 服务 (根路径)
+    # 健康检查
+    location /health/ {
+        access_log off;
+        return 200 "OK";
+        add_header Content-Type text/plain;
+    }
+
+        # 前台用户界面 -> web 服务 (根路径)
     location / {
         proxy_pass http://web;
         proxy_http_version 1.1;
@@ -73,13 +80,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
-    }
-
-    # 健康检查
-    location /health {
-        access_log off;
-        return 200 "OK";
-        add_header Content-Type text/plain;
     }
 }
 
