--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -55,14 +55,19 @@ server {
         proxy_read_timeout 60s;
     }
 
-    # 后台管理界面 -> admin 服务（保留 /admin 前缀）
-    location /admin/ {
+    # 后台管理界面 -> admin 服务（^~ 确保优先匹配）
+    location ^~ /admin/ {
         proxy_pass http://admin;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+    }
+
+    # /admin 不带斜杠时重定向
+    location = /admin {
+        return 301 /admin/;
     }
 
     # 健康检查
