--- a/admin/nginx.conf
+++ b/admin/nginx.conf
@@ -7,7 +7,8 @@ server {
     # 处理 /admin/ 前缀的请求（外部 nginx 转发过来的）
     location /admin/ {
         alias /usr/share/nginx/html/;
-        try_files $uri $uri/ /index.html;
+        index index.html;
+        try_files $uri $uri/ /admin/index.html;
     }
 
     # 处理 /admin 精确匹配（重定向到带斜杠的路径）
@@ -18,12 +19,6 @@ server {
     # 直接访问（本地开发或容器内测试）
     location / {
         try_files $uri $uri/ /index.html;
-    }
-
-    # 静态资源缓存
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 30d;
-        add_header Cache-Control "public, immutable";
     }
 
     # 禁止访问隐藏文件
