--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -55,8 +55,17 @@ server {
         proxy_read_timeout 60s;
     }
 
-    # 后台管理界面 -> admin 服务（^~ 确保优先匹配）
-    location ^~ /admin/ {
+    # 后台管理界面 -> admin 服务
+    location /admin/ {
+        proxy_pass http://admin;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
+    }
+    # 后台管理界面 -> admin 服务 (根路径)
+    location /admin {
         proxy_pass http://admin;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
@@ -65,19 +74,7 @@ server {
         proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
     }
 
-    # /admin 不带斜杠时重定向
-    location = /admin {
-        return 301 /admin/;
-    }
-
-    # 健康检查
-    location /health/ {
-        access_log off;
-        return 200 "OK";
-        add_header Content-Type text/plain;
-    }
-
-        # 前台用户界面 -> web 服务 (根路径)
+    # 前台用户界面 -> web 服务 (根路径)
     location / {
         proxy_pass http://web;
         proxy_http_version 1.1;
@@ -86,6 +83,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
     }
+
+        # 健康检查
+    location /health/ {
+        access_log off;
+        return 200 "OK";
+        add_header Content-Type text/plain;
+    }
+
 }
 
 # ==================== HTTPS 服务 (可选) ====================
