--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -56,8 +56,9 @@ server {
     }
 
     # 后台管理界面 -> admin 服务
+    # 使用尾斜杠去掉 /admin 前缀，因为 admin 容器根路径就是 /usr/share/nginx/html
     location /admin/ {
-        proxy_pass http://admin;
+        proxy_pass http://admin/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -66,7 +67,7 @@ server {
     }
     # 后台管理界面 -> admin 服务 (根路径)
     location /admin {
-        proxy_pass http://admin;
+        proxy_pass http://admin/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
