对无权限货币进行汇率转换

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "httpx>=0.28.1",
     "redis>=7.1.0",
     "wechatpayv3>=2.0.1",
+    "forex-python>=1.9.2",
 ]
 
 [project.optional-dependencies]
