新增自动部署域名+ ssl证书申请

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,17 @@ APP_NAME=Card Store
 APP_VERSION=0.1.0
 DEBUG=false
 
+# ==================== 域名和 SSL 配置 ====================
+# 域名（必填，用于 nginx 配置和 SSL 证书申请 不用域名或者证书可以忽略）
+DOMAIN=localhost
+
+# 是否启用 SSL（true/false）
+# 启用后会自动使用 Let's Encrypt 申请证书
+ENABLE_SSL=false
+
+# Let's Encrypt 邮箱（启用 SSL 时必填，用于证书过期通知）
+SSL_EMAIL=
+
 # ==================== 数据库配置 ====================
 # 本地开发（SQLite）
 # DATABASE_URL=sqlite://./data/cardstore.db
