--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -19,6 +19,11 @@ server {
     listen 80;
     server_name localhost;
 
+    # Let's Encrypt 验证路径（SSL 证书申请用）
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     # 安全头
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
@@ -99,7 +104,8 @@ server {
 # 启用方法: 取消下面的注释，并挂载 SSL 证书到容器
 #
 # server {
-#     listen 443 ssl http2;
+#     listen 443 ssl;
+#     http2;
 #     server_name localhost;
 #
 #     # SSL 证书配置（需要挂载到容器）
@@ -155,8 +161,8 @@ server {
 #     }
 #
 #     # 后台管理
-#     location /admin {
-#         proxy_pass http://admin;
+#     location /admin/ {
+#         proxy_pass http://admin/;
 #         proxy_http_version 1.1;
 #         proxy_set_header Host $host;
 #         proxy_set_header X-Real-IP $remote_addr;
@@ -164,7 +170,7 @@ server {
 #         proxy_set_header X-Forwarded-Proto https;
 #     }
 #
-#     location /admin/ {
+#     location /admin {
 #         proxy_pass http://admin/;
 #         proxy_http_version 1.1;
 #         proxy_set_header Host $host;
