--- a/nginx/conf.d/default_ssl.conf
+++ b/nginx/conf.d/default_ssl.conf
@@ -1,19 +1,5 @@
-# 上游服务定义
-upstream backend {
-    server backend:8000;
-    keepalive 32;
-}
-
-upstream web {
-    server web:80;
-}
-
-upstream admin {
-    server admin:80;
-}
-
-
-# ==================== HTTPS 服务 (可选) ====================
+# ==================== HTTPS 服务 ====================
+# 注意：upstream 定义在 default.conf 中，此文件仅包含 HTTPS server 块
 # 场景: 本服务直接处理 HTTPS（需要挂载证书）
 # 启用方法: 取消下面的注释，并挂载 SSL 证书到容器
 
@@ -109,11 +95,4 @@ server {
         return 200 "OK";
         add_header Content-Type text/plain;
     }
-}
-
-# HTTP 重定向到 HTTPS（如果启用了 HTTPS）
-server {
-    listen 80;
-    server_name _;
-    return 301 https://$host$request_uri;
 }
