--- a/nginx/conf.d/default_ssl.conf
+++ b/nginx/conf.d/default_ssl.conf
@@ -4,8 +4,7 @@
 # 启用方法: 取消下面的注释，并挂载 SSL 证书到容器
 
 server {
-    listen 443 ssl;
-    http2;
+    listen 443 ssl http2;
     server_name _;
 
     # SSL 证书配置（需要挂载到容器）
